Fix cell vertical alignment design issue, wrap table inside unique id

--- a/assets/advanced-wp-table.scss
+++ b/assets/advanced-wp-table.scss
@@ -13,6 +13,7 @@ $color__border: #ddd;
 
 				.advanced-wp-table-cell {
 					display: table-cell;
+					vertical-align: top;
 				}
 			}
 		}
@@ -40,10 +41,6 @@ $color__border: #ddd;
 @media (max-width: 767px) {
 	.advanced-wp-table-row {
 		margin: 0 0 1em;
-	}
-
-	.advanced-wp-table-cell {
-		display: flex;
 	}
 
 	.advanced-wp-table {
