--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -87,7 +87,7 @@
 		border: 1px solid;
 		padding: 5px;
 		position: relative;
-		vertical-align: initial;
+		vertical-align: top;
 	}
 
 	th {
